fix: add spacing

--- a/src/scss/core/modules/_productcomments.scss
+++ b/src/scss/core/modules/_productcomments.scss
@@ -188,7 +188,7 @@
     gap: 1rem;
     align-items: center;
     justify-content: normal;
-    padding: 0;
+    padding: 1rem 0 0;
     margin: 0 0 1rem;
 
     .section-title {
